Fixes remaining bugs due to last migrations

--- a/config/locales/fra/prints/order_preparation.xml
+++ b/config/locales/fra/prints/order_preparation.xml
@@ -28,16 +28,16 @@
 	</set>
       </part>
 
-      <table collection="transport.deliveries.first.lines" fixed="true">
+      <table collection="transport.deliveries.first.items" fixed="true">
 	<column label="Quantité" property="quantity" width="20mm"/>
 	<column label="Produit" property="product.name" width="60mm"/>
 	<column label="Montant" property="price.amount_with_taxes" width="40mm"/>
-	<column label="Lieu de stockage" property="order_line.warehouse/name" width="50mm"/>
+	<column label="Lieu de stockage" property="order_item.warehouse/name" width="50mm"/>
       </table>
 
 
       <iteration variable="delivery" collection="transport.deliveries">
-	<table collection="delivery.lines">
+	<table collection="delivery.items">
 	  <column label="Produit" property="product.name" width="60mm"/>
 	  <column label="Quantité" property="quantity" width="20mm"/>
 	  <column label="Prix HT" property="price/amount" width="20mm"/>
