--- a/config/locales/fra/prints/transport.xml
+++ b/config/locales/fra/prints/transport.xml
@@ -37,7 +37,7 @@
             <rectangle width="94mm" height="23mm" left="96mm" border="0.5 solid #555"/> 
 	  </set>
         </part>
-	<table collection="delivery.lines">
+	<table collection="delivery.items">
 	  <column label="Quantité" property="quantity" width="20mm"/>
 	  <column label="Unité" property="unit.name" width="10mm"/>
 	  <column label="Produit" property="product.name" width="160mm"/>
