--- a/config/locales/jpn/action.yml
+++ b/config/locales/jpn/action.yml
@@ -30,7 +30,7 @@ jpn:
     animal_treatments: #?
     animals:
       # edit: "Modifier l'animal\_: %{name}"
-      # index: "Liste des animaux"
+      # index: "Productions animales"
       # new: "Nouvel animal"
       # show: "Animal\_: %{name}"
     application: #?
@@ -232,12 +232,12 @@ jpn:
     land_parcel_groups: #?
     land_parcel_kinships: #?
     land_parcels:
-      # divide: "Diviser l’îlot\_: %{name}"
-      # edit: "Modifier l’ îlot\_: %{name}"
-      # index: "Îlots"
-      # merge: "Fusionner des îlots"
-      # new: "Ajouter un nouvel îlot"
-      # show: "Îlot %{name}"
+      # divide: "Diviser la parcelle\_: %{name}"
+      # edit: "Modifier la parcelle\_: %{name}"
+      # index: "Parcelles"
+      # merge: "Fusionner des parcelles"
+      # new: "Ajouter une nouvelle parcelle"
+      # show: "Parcelle %{name}"
     listing_node_items: #?
     listing_nodes:
       # edit: "Modifier le nœud"
@@ -347,10 +347,10 @@ jpn:
       # index: "Transferts et pertes de stocks"
       # new: "Ajouter un transfert ou une perte de stocks"
     product_varieties:
-      # edit: "Modifier la race\_: %{name} "
-      # index: "Races"
-      # new: "Créer une race"
-      # show: "Race\_: %{name}"
+      # edit: "Modifier la variété\_: %{name} "
+      # index: "Variétés"
+      # new: "Créer une variétés"
+      # show: "Variété\_: %{name}"
     production_chain_conveyors:
       # edit: "Mettre à jour le convoyeur (%{source_id}-%{target_id})"
       # new: "Ajouter un nouveau convoyeur dans la chaîne de production"
@@ -366,10 +366,10 @@ jpn:
       # new: "Ajouter une nouvelle chaîne de production"
       # show: "Chaîne de production\_: %{name}"
     products:
-      # edit: "Modifier un animal"
-      # index: "Animaux"
-      # new: "Créer un animal"
-      # show: "animal\_: %{name}"
+      # edit: "Modifier un produit"
+      # index: "Produits"
+      # new: "Créer un produits"
+      # show: "produit\_: %{name}"
     professions:
       # edit: "Modifier la profession\_: %{name}"
       # index: "Professions"
@@ -490,8 +490,13 @@ jpn:
       # new: "Création d’un nouvel utilisateur"
       # show: "Utilisateur\_: %{first_name} %{last_name} (%{name})"
       # unlock: "Déverrouiller l’utilisateur"
+    vegetals:
+      # edit: "Modifier une production végétale"
+      # index: "Productions végétales"
+      # new: "Nouvelle production végétale"
+      # show: "Production végétale\_: %{name} %{area_measure} %{area_unit.name}"
     warehouses:
-      # edit: "Modifier l’un lieu de stockage"
+      # edit: "Modifier un lieu de stockage"
       # index: "Lieux de stockage"
       # new: "Ajout d’un lieu de stockage"
       # show: "Détail du lieu de stockage\_: %{name}"
@@ -500,6 +505,8 @@ jpn:
     accountancy: "会計" #?
     # accounts: "Plan de comptes"
     # admin: "Administration"
+    # affairs: "Affaires"
+    # animals: "Animaux"
     application: "一般的な車掌"
     # areas: "Zones postales"
     # assets: "Immobilisations"
@@ -570,7 +577,7 @@ jpn:
     # production_chain_work_center_uses: "Utilisation des ateliers de chaînes de production"
     # production_chain_work_centers: "Atelier de chaînes de production"
     # production_chains: "Chaînes de production"
-    # products: "Animaux"
+    # products: "Produits"
     # professions: "Professions"
     # purchase_items: "Lignes d’achat"
     # purchase_natures: "Types d’achat"
