--- a/config/locales/spa/action.yml
+++ b/config/locales/spa/action.yml
@@ -36,7 +36,7 @@ spa:
     animal_treatments: #?
     animals:
       # edit: "Modifier l'animal\_: %{name}"
-      # index: "Liste des animaux"
+      # index: "Productions animales"
       # new: "Nouvel animal"
       # show: "Animal\_: %{name}"
     application: #?
@@ -253,12 +253,12 @@ spa:
     land_parcel_groups: #?
     land_parcel_kinships: #?
     land_parcels:
-      # divide: "Diviser l’îlot\_: %{name}"
-      # edit: "Modifier l’ îlot\_: %{name}"
-      # index: "Îlots"
-      # merge: "Fusionner des îlots"
-      # new: "Ajouter un nouvel îlot"
-      # show: "Îlot %{name}"
+      # divide: "Diviser la parcelle\_: %{name}"
+      # edit: "Modifier la parcelle\_: %{name}"
+      # index: "Parcelles"
+      # merge: "Fusionner des parcelles"
+      # new: "Ajouter une nouvelle parcelle"
+      # show: "Parcelle %{name}"
     listing_node_items: #?
     listing_nodes:
       # edit: "Modifier le nœud"
@@ -372,10 +372,10 @@ spa:
       # index: "Transferts et pertes de stocks"
       # new: "Ajouter un transfert ou une perte de stocks"
     product_varieties:
-      # edit: "Modifier la race\_: %{name} "
-      # index: "Races"
-      # new: "Créer une race"
-      # show: "Race\_: %{name}"
+      # edit: "Modifier la variété\_: %{name} "
+      # index: "Variétés"
+      # new: "Créer une variétés"
+      # show: "Variété\_: %{name}"
     production_chain_conveyors:
       # edit: "Mettre à jour le convoyeur (%{source_id}-%{target_id})"
       # new: "Ajouter un nouveau convoyeur dans la chaîne de production"
@@ -391,10 +391,10 @@ spa:
       # new: "Ajouter une nouvelle chaîne de production"
       # show: "Chaîne de production\_: %{name}"
     products:
-      # edit: "Modifier un animal"
-      # index: "Animaux"
-      # new: "Créer un animal"
-      # show: "animal\_: %{name}"
+      # edit: "Modifier un produit"
+      # index: "Produits"
+      # new: "Créer un produits"
+      # show: "produit\_: %{name}"
     professions:
       # edit: "Modifier la profession\_: %{name}"
       # index: "Professions"
@@ -517,6 +517,11 @@ spa:
       show: "Utilizador : %{first_name} %{last_name} (%{name})"
       statistics: "Mis estadisticas" #?
       # unlock: "Déverrouiller l’utilisateur"
+    vegetals:
+      # edit: "Modifier une production végétale"
+      # index: "Productions végétales"
+      # new: "Nouvelle production végétale"
+      # show: "Production végétale\_: %{name} %{area_measure} %{area_unit.name}"
     warehouses:
       edit: "Modificacion de un lugar de deposito"
       index: "Lugar de deposito"
@@ -527,6 +532,8 @@ spa:
     accountancy: "Contabilidad" #?
     accounts: "Plan de cuento"
     # admin: "Administration"
+    # affairs: "Affaires"
+    # animals: "Animaux"
     application: "Aplicación"
     # areas: "Zones postales"
     # assets: "Immobilisations"
@@ -599,7 +606,7 @@ spa:
     # production_chain_work_center_uses: "Utilisation des ateliers de chaînes de production"
     # production_chain_work_centers: "Atelier de chaînes de production"
     # production_chains: "Chaînes de production"
-    # products: "Animaux"
+    # products: "Produits"
     # professions: "Professions"
     # purchase_items: "Lignes d’achat"
     # purchase_natures: "Types d’achat"
