Finishes to code Affair

--- a/config/locales/eng/models.yml
+++ b/config/locales/eng/models.yml
@@ -444,6 +444,7 @@ eng:
     address: "Address"
     addresses: "Addresses"
     admin: "Admin"
+    # affair: "Affair"
     agency_code: "Agency code"
     allocation_account: "Allocation account"
     amount: "Amount"
