--- a/config/locales/spa/models.yml
+++ b/config/locales/spa/models.yml
@@ -429,6 +429,7 @@ spa:
     # address: "Adresse"
     # addresses: "Adresses"
     # admin: "Administrateur système"
+    # affair: "Affair"
     # agency_code: "Code guichet"
     # allocation_account: "Compte de dotation"
     # amount: "Montant"
