Cleans drastically rights and menus

--- a/config/locales/arb/models.yml
+++ b/config/locales/arb/models.yml
@@ -1262,6 +1262,7 @@ arb:
     incoming_payments: "الدفعات"
     # indicators: "Indicators"
     indirect_links: "روابط مباشرة"
+    # indivisible: "Indivisible"
     # initial_number: "Numéro initial"
     # input_conveyors: "Convoyeur entrant"
     integer_value: "قيمة العدد الصحيح"
@@ -1363,6 +1364,9 @@ arb:
     # maximal_length: "Longueur maximale"
     # maximal_quantity: "Maximal quantity"
     # maximal_value: "Valeur maximale"
+    # measure_unit: "Unité de mesure"
+    # measure_value: "Valeur de la mesure"
+    # measured_at: "Mesuré à"
     # memberships: "Memberships"
     min_duration: "(دقيقة (دقائق"
     # minimal_length: "Longueur minimale"
