--- a/config/locales/eng/models.yml
+++ b/config/locales/eng/models.yml
@@ -771,6 +771,7 @@ eng:
     incoming_payments: "Incoming payments"
     # indicators: "Indicators"
     indirect_links: "Indirect links"
+    # indivisible: "Indivisible"
     initial_number: "Initial number"
     input_conveyors: "Input conveyors"
     integer_value: "Integer value"
@@ -853,6 +854,9 @@ eng:
     # maximal_length: "Longueur maximale"
     # maximal_quantity: "Maximal quantity"
     # maximal_value: "Valeur maximale"
+    # measure_unit: "Unité de mesure"
+    # measure_value: "Valeur de la mesure"
+    # measured_at: "Mesuré à"
     # memberships: "Memberships"
     min_duration: "Min duration"
     # minimal_length: "Longueur minimale"
