--- a/config/locales/spa/models.yml
+++ b/config/locales/spa/models.yml
@@ -733,6 +733,7 @@ spa:
     # incoming_payments: "Encaissements"
     # indicators: "Indicators"
     # indirect_links: "Liens indirects"
+    # indivisible: "Indivisible"
     # initial_number: "Numéro initial"
     # input_conveyors: "Convoyeur entrant"
     # integer_value: "Valeur entière"
@@ -814,6 +815,9 @@ spa:
     # maximal_length: "Longueur maximale"
     # maximal_quantity: "Maximal quantity"
     # maximal_value: "Valeur maximale"
+    # measure_unit: "Unité de mesure"
+    # measure_value: "Valeur de la mesure"
+    # measured_at: "Mesuré à"
     # memberships: "Memberships"
     # min_duration: "Minute(s)"
     # minimal_length: "Longueur minimale"
