--- a/config/locales/eng/action.yml
+++ b/config/locales/eng/action.yml
@@ -357,12 +357,12 @@ eng:
     product_nature_components:
       edit: "Edit the component: %{name}"
       new: "Add a new component"
-    product_natures:  #?
+    product_natures:
       change_quantities: "Change quantities for product" #?
-      edit: "Edit the product: %{name}" #?
-      index: "Products" #?
-      new: "Add a new product" #?
-      show: "Product: %{name}" #?
+      edit: "Edit the product: %{name}"
+      index: "Products"
+      new: "Add a new product"
+      show: "Product: %{name}"
     product_process_phases: #?
     product_processes: #?
     product_species: #?
