--- a/config/locales/jpn/action.yml
+++ b/config/locales/jpn/action.yml
@@ -334,7 +334,11 @@ jpn:
     product_nature_components:
       # edit: "Modifier le composant %{name}"
       # new: "Ajouter un composant"
-    product_natures: #?
+    product_natures:
+      # edit: "Modifier le type de produit\_: %{name}"
+      # index: "Type de produit"
+      # new: "Nouveau type de produit"
+      # show: "Type de produit\_: %{name}"
     product_process_phases: #?
     product_processes: #?
     product_species: #?
