work on tools model and views

--- a/config/locales/arb/action.yml
+++ b/config/locales/arb/action.yml
@@ -338,6 +338,7 @@ arb:
       index: "دفعات"
       new: "اضافة دفعة"
       show: "رقم الدفعة%{number} من اجل %{payee}"
+    places: #?
     posologies: #?
     preferences:
       # edit: "Modifier les préférences"
