--- a/config/locales/fra/models.yml
+++ b/config/locales/fra/models.yml
@@ -158,8 +158,13 @@ fra:
         period: "Période"
       tool:
         born_at: "Date de mise en service"
+        content_maximal_quantity: "Capacité maximale"
+        content_nature: "Produit contenu"
+        content_unit: "Unité"
         dead_at: "Date de mise au rebut"
+        parent_place: "Lieu de parking"
         uses: "Utilisations d’outil"
+        variety: "Marque"
       tracking:
         active: "Utilisé"
       transfer:
@@ -461,7 +466,7 @@ fra:
     # alive: "Alive"
     allocation_account: "Compte de dotation"
     amount: "Montant"
-    animal_drugs: "Médicaments"
+    animal_drugs: "Médicaments" #?
     animals: "Animals" #?
     annotation: "Annotation"
     area: "Zone postale"
@@ -574,7 +579,8 @@ fra:
     connected_at: "Connecté le"
     consumption: "Consommation (litres/heure)" #?
     content_maximal_quantity: "Content maximal quantity"
-    # content_nature: "Content nature"
+    content_nature: "Content nature"
+    # content_unit: "Content unit"
     conveyors: "Convoyeurs"
     coordinate: "Coordonnée"
     country: "Pays"
@@ -922,7 +928,7 @@ fra:
     parent: "Parent"
     parent_kinships: "Relation parent" #?
     parent_land_parcel: "Sur-îlot" #?
-    # parent_place: "Parent place"
+    parent_place: "Parent place"
     parts: "Affectations" #?
     parts_amount: "Montant utilisé" #?
     passages: "Passages" #?
@@ -1104,6 +1110,7 @@ fra:
     stockable: "Gérer les stocks" #?
     stockable_products: "Produits stockables" #?
     stocks: "Stocks de produit"
+    # stocks_products: "Stocks products"
     stopped_at: "Arrêté à"
     stopped_on: "Arrêté le"
     # storable: "Storable"
