--- a/config/locales/eng/action.yml
+++ b/config/locales/eng/action.yml
@@ -701,6 +701,15 @@ eng:
     users: "Users"
     warehouses: "Warehouses"
   errors:
+    messages:
+      # already_confirmed: "a déjà été validé(e)"
+      # confirmation_period_expired: "doit être confirmé sous %{period}, refaites une nouvelle demande s'il vous plait"
+      # expired: "a expiré, merci d'en faire une nouvelle demande"
+      # not_found: "n'a pas été trouvé(e)"
+      # not_locked: "n'était pas verrouillé(e)"
+      not_saved:
+        # one: "1 erreur a empêché ce(tte) %{resource} d'être sauvegardé(e) :"
+        # other: "%{count} erreurs ont empêché ce(tte) %{resource} d'être sauvegardé(e) :"
     template:
       body: "There were problems with the following fields:"
       header:
