Reviews bad columns

--- a/config/locales/arb/models.yml
+++ b/config/locales/arb/models.yml
@@ -1250,6 +1250,7 @@ arb:
     full_name_format: "التصميم"
     function_title: "الكياسة"
     future_events: "احداث المستقبل"
+    # gender: "Gender"
     # genealogy: "Généalogie"
     generated: "ولدت"
     global_balance: "الرصيد العالمي"
@@ -1418,6 +1419,7 @@ arb:
     number_increment: "الاضافة"
     number_start: "بدأ الترقيم"
     observations: "ملاحظات"
+    # observed_at: "Observed at"
     # of_company: "Dossier basé sur cette entreprise"
     office: "المكتب/الاستديو"
     old_password: "كلمة المرور الحالية"
