--- a/config/locales/eng/models.yml
+++ b/config/locales/eng/models.yml
@@ -759,6 +759,7 @@ eng:
     full_name_format: "Full name format"
     function_title: "Function title"
     future_events: "Future events"
+    # gender: "Gender"
     # genealogy: "Généalogie"
     generated: "Generated"
     global_balance: "Global balance"
@@ -905,6 +906,7 @@ eng:
     number_increment: "Number increment"
     number_start: "Number start"
     observations: "Observations"
+    # observed_at: "Observed at"
     of_company: "Of the company"
     office: "Office"
     old_password: "Old password"
