--- a/config/locales/spa/models.yml
+++ b/config/locales/spa/models.yml
@@ -721,6 +721,7 @@ spa:
     # full_name_format: "Format du nom complet"
     # function_title: "Civilités"
     # future_events: "Evènements futurs"
+    # gender: "Gender"
     # genealogy: "Généalogie"
     # generated: "Généré"
     # global_balance: "Solde global"
@@ -864,6 +865,7 @@ spa:
     # number_increment: "Incrément"
     # number_start: "Début de la numération"
     # observations: "Observations"
+    # observed_at: "Observed at"
     # of_company: "Dossier basé sur cette entreprise"
     # office: "Bureau/Atelier"
     # old_password: "Mot de passe actuel"
