Configure SimpleForm for Foundation and add modules management for unrolls

--- a/config/locales/fra/models.yml
+++ b/config/locales/fra/models.yml
@@ -1325,7 +1325,7 @@ fra:
       canal:
         email: "E-mail"
         fax: "Fax"
-        mail: "Mail"
+        mail: "Adresse postale"
         mobile: "Téléphone portable"
         phone: "Téléphone fixe"
         website: "Site web"
