--- a/config/locales/fra/action.yml
+++ b/config/locales/fra/action.yml
@@ -794,7 +794,7 @@ fra:
     delivery_natural_gas_and_electricity_assessable: "Livraisons de gaz naturel ou d’électricité imposables en France"
     delivery_natural_gas_and_electricity_not_assessable: "Livraisons de gaz naturel ou d’électricité non imposables en France"
     demo_bar: "Histogramme"
-    demo_pie: "Camenbert"
+    demo_pie: "Camembert"
     departments: "Services"
     deposit: "Remise en banque"
     deposit_update: "Modifier la remise en banque"
